# CMPlatform

./: CMakeLists.txt  README.md  path_config.cmake
inc/hgl/: QT.h
inc/hgl/platform/: Android.h  BigLittleDetector.h  CpuARMFeatures.h  CpuInfo.h  CpuX86Features.h  Desktop.h  DisplayMode.h  InputDevice.h  QT5.h  QT5Application.h  SOC.h  Vulkan.h  Window.h
inc/hgl/type/: QTString.h
src/: CMakeLists.txt  SOC.cpp  Window.cpp
src/Android/: AndroidVersion.cpp  NativeActivitySupport.cpp  ProgramPath.cpp
src/Apple/: CpuInfo_ARM.cpp  CpuInfo_X86.cpp  ProgramPath.mm  Semaphore.cpp  ThreadMutext.mm
src/Posix/: Fifo.cpp  MMapFile.cpp  Pipe.cpp
src/QT/: CMakeLists.txt  QT5WinUCS2.cpp
src/SOC/: ARMCpuInfo.cpp  SOC.cpp
src/UNIX/: Charset.cpp  CondVar.cpp  CpuInfo_ARM.cpp  CpuInfo_X86.cpp  EnumFile.cpp  ExternalModule.cpp  Fifo.cpp  File.cpp  FileAccess.cpp  LogConsole.cpp  Process.cpp  ProgramPath.cpp  RWLock.cpp  Semaphore.cpp  SystemInfo.cpp  Thread.cpp  ThreadMutex.cpp  XCBWindow.cpp  XCBWindow.h
src/Win/: Clipboard.cpp  CodePage.cpp  CondVar.cpp  CpuInfo.cpp  CpuInfo_ARM.cpp  CpuInfo_X86.cpp  DateTime.cpp  Desktop.cpp  DisplayMode.cpp  EnumFile.cpp  EnumVolume.cpp  EnumWinFonts.cpp  ExternalModule.cpp  Fifo.cpp  File.cpp  FileAccess.cpp  LogConsole.cpp  LogDialog.cpp  LongPathAware.manifest  MMapFile.cpp  Pipe.cpp  ProcMutex.cpp  ProgramPath.cpp  RWLock.cpp  Semaphore.cpp  SystemInfo.cpp  Thread.cpp  Time.cpp  WinMessage.cpp  WinVulkan.cpp  WinWindow.cpp  WinWindow.h  vsprintf.cpp
