cmake_minimum_required(VERSION 3.0)

project(CMPlatform)

include(path_config.cmake)
CMPlatformSetup(${CMAKE_CURRENT_SOURCE_DIR})

IF(CM_BUILD_QT)

    find_package(Qt${CM_QT_MAJOR_VERSION} ${QT_MIN_VERSION} CONFIG REQUIRED COMPONENTS Core)

	IF(WIN32)
		SET(HGL_QT_MAIN_SOURCE ${CMPLATFORM_ROOT_SOURCE_PATH}/src/QT/QTWinUCS2.cpp)
	ELSE()
		SET(HGL_QT_MAIN_SOURCE ${CMPLATFORM_ROOT_SOURCE_PATH}/src/QT/QTUnixUTF8.cpp)
	ENDIF()

	SET(HGL_QT_LIB CM.Qt${CM_QT_MAJOR_VERSION}Support)
ENDIF()

add_subdirectory(${CMPLATFORM_ROOT_SOURCE_PATH})
